--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "مخدوم",
-  "short_name": "مخدوم"
+  "short_name": "مخدوم",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
