--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,19 @@
 {
-  "name": "مخدوم",
-  "short_name": "مخدوم",
+  "short_name": "ملائكة",
+  "name": "ملائكة كنيسة السيدة العذراء – محرم بك",
+  "lang": "ar",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#ffffff",
+  "theme_color": "#c53030",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
