--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,9 @@
 {
-  "version": 3,
   "builds": [
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
