--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "church-app",
+  "name": "vite-vercel-app",
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@tanstack/react-virtual": "^3.13.13",
+    "build": "^0.1.4",
     "firebase": "^12.6.0",
     "lodash": "^4.17.21",
     "react": "^18.0.0",
@@ -15,6 +16,7 @@
     "react-router-dom": "^6.22.0",
     "react-virtualized-auto-sizer": "^1.0.26",
     "react-window": "^2.2.3",
+    "sharp": "^0.34.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
