--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,7 @@
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist",
-        "buildCommand": "npm run build"
-      }
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
